# quantum-stream-nexus

./: README.md  docker-compose.yml
frontend/app/: page.tsx
frontend/store/: useMarketStore.ts
node-api/: package.json  tsconfig.json
node-api/src/: index.ts
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: main.rs
